--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
           </a>
           <a
             class="sec1__a b"
-            href="www.linkedin.com/in/gaston-condori"
+            href="https://www.linkedin.com/in/gaston-condori/"
             target="_blank"
             ><i class="sec1__i bx bxl-linkedin bx-tada-hover"></i
           ></a>
           <a
             class="sec1__a c"
-            href="instagram.com/maik_n.n/?hl=es-la"
+            href="https://www.instagram.com/maik_n.n/?hl=es-la"
             target="_blank"
             ><i class="sec1__i bx bxl-instagram-alt bx-tada-hover"></i
           ></a>
